--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -56,3 +56,6 @@ tokio-util = { version = "0.7", features = ["io"] }
 
 # Futures for WebSocket
 futures = "0.3"
+
+# Base64 decoding (for FTS indexing of plaintext messages)
+base64 = "0.22"
