--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@sapphi-red/web-noise-suppressor": "^0.3.5",
     "@shiguredo/rnnoise-wasm": "^2025.1.5",
     "@tauri-apps/api": "^2.0.0",
     "@tauri-apps/plugin-process": "^2.3.1",
@@ -33,6 +34,7 @@
     "clsx": "^2.1.1",
     "livekit-client": "^2.7.2",
     "lucide-react": "^0.469.0",
+    "onnxruntime-web": "^1.24.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.0.0",
