feat: add DTLN noise suppression, audio A/B test, adaptive bitrate, and voice gating
- Add DTLN (Dual-signal LSTM) noise suppression via Emscripten WASM
- Add Audio A/B Test as a popout modal from Voice & Audio settings
- Add adaptive bitrate control for voice connections
- Add VAD-based voice gating with configurable sensitivity
- Add audio analysis utilities (RMS, peak, crest factor, SNR, spectrogram)
- Add RNNoise and DeepFilterNet3 to audio test for side-by-side comparison

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@emoji-mart/data": "^1.2.1",
+    "@ricky0123/vad-web": "^0.0.30",
     "@sapphi-red/web-noise-suppressor": "^0.3.5",
     "@tauri-apps/api": "^2.0.0",
     "@tauri-apps/plugin-notification": "^2.3.3",
